--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": ["@babel/preset-env", "@babel/preset-typescript", "@babel/react"],
     "plugins": [
+        ["@babel/transform-runtime"],
         [
             "module-resolver",
             {
