--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "@babel/cli": "^7.14.8",
         "@babel/core": "^7.14.8",
+        "@babel/plugin-transform-runtime": "^7.19.6",
         "@babel/preset-env": "^7.14.9",
         "@babel/preset-react": "^7.14.5",
         "@babel/preset-typescript": "^7.14.5",
@@ -20,7 +21,7 @@
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
         "autoprefixer": "^10.3.1",
-        "babel-loader": "^8.2.2",
+        "babel-loader": "^8.2.5",
         "babel-plugin-module-resolver": "^4.1.0",
         "css-loader": "^6.2.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
@@ -43,6 +44,7 @@
         "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
+        "@babel/runtime": "^7.19.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     }
