--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "@babel/runtime": "^7.19.4",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-hook-form": "^7.38.0"
     }
 }
