--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@babel/runtime": "^7.19.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-hook-form": "^7.38.0"
+        "react-hook-form": "^7.38.0",
+        "react-number-format": "^5.0.1"
     }
 }
